@@ -5181,6 +5181,13 @@ The better approach would be to ensure your
 disk won't run out of free space.</td>
 <td>false</td>
 </tr>
+<tr><td>use_gio_unsafe_file_saving</td>
+<td>Whether to use GIO as the unsafe file
+saving backend. It is better on most
+situations but is know not to work
+correctly on some complex setups.</td>
+<td>true</td>
+</tr>
 <tr><td>gio_unsafe_save_backup</td>
 <td>Make a backup when using GIO unsafe file
 saving. Backup is named <cite>filename~</cite>.</td>
@@ -6572,7 +6579,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2011-06-13 20:23 UTC.
+Generated on: 2011-06-20 15:39 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
