@@ -4425,6 +4425,10 @@ use_safe_file_saving              Defines the mode how Geany saves files to    f
                                   break things seriously.
                                   The better approach would be to ensure your
                                   disk won't run out of free space.
+use_gio_unsafe_file_saving        Whether to use GIO as the unsafe file        true
+                                  saving backend. It is better on most
+                                  situations but is know not to work
+                                  correctly on some complex setups.
 gio_unsafe_save_backup            Make a backup when using GIO unsafe file     false
                                   saving. Backup is named `filename~`.
 **Search related**
