@@ -1,3 +1,11 @@
+2011-06-20  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/document.c, src/document.h, src/keyfile.c, doc/geany.txt,
+   doc/geany.html:
+   Add an hidden pref to choose between GIO and plain C unsafe
+   file saving.
+
+
 2011-06-18  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/document.c, src/document.h, src/editor.c:
